<resources>
    <string name="app_name">Firebase demo</string>
    <string name="notification_channel_group_general">General</string>

    // for login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_email_password">Email or password is incorrect</string>
    <string name="sign_up_free">Not a member yet? Sign up for free!</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in_free">Already a member? Sign in</string>
    <string name="authenticating">Authenticating...</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="please_confirm_email">Please confirm your email (%s) to create an account</string>
    <string name="user_login_successful">Successful Sign In</string>
    <string name="ok">Ok</string>
    <string name="action_logout">Log out</string>
    <string name="login_other_methods">Usa otro método</string>
    <string name="login_with_google">Google</string>
</resources>
