<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:paddingTop="@dimen/margin"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:theme="@style/textLabel">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_menu_email"
            android:drawablePadding="@dimen/padding_normal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        android:theme="@style/textLabel">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/padding_normal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignInUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:theme="@style/btnLoginStyle"/>

    <TextView
        android:id="@+id/tvSignInUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/sign_in_free"
        app:layout_constraintTop_toBottomOf="@id/btnSignInUp"
        android:textColor="@android:color/white"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvOtherMethods"
        app:layout_constraintTop_toTopOf="@id/tvOtherMethods"
        app:layout_constraintBottom_toBottomOf="@id/tvOtherMethods"/>

    <TextView
        android:id="@+id/tvOtherMethods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/login_other_methods"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignInUp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_margin="@dimen/margin"
        app:layout_constraintStart_toEndOf="@id/tvOtherMethods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOtherMethods"
        app:layout_constraintBottom_toBottomOf="@id/tvOtherMethods"/>

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:layout_marginTop="@dimen/margin"
        android:drawableStart="@drawable/google"
        android:drawablePadding="@dimen/padding_normal"
        android:backgroundTint="@color/colorGoogle"
        android:text="@string/login_with_google"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOtherMethods"/>

</androidx.constraintlayout.widget.ConstraintLayout>
